hydromel/tests/errors/sem-target-inst-port-not-found.mel
#lang hydromel

# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

component D
end

component C
    port x : in unsigned(32)
    instance d = D
    # ERROR: Port not found in component D
    d.a = x
end
